Clean up code & Fix mistakes